k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birum-home-services
spec:
  replicas: 2
  selector:
    matchLabels:
      app: birum-home-services
  template:
    metadata:
      labels:
        app: birum-home-services
    spec:
      containers:
        - name: app
          image: mbirum/home-services:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "200Mi"
            limits:
              memory: "400Mi"
          command:
          - /bin/sh
          - -c
          - java -javaagent:/opt/newrelic/newrelic.jar -jar app.jar
